<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GroceryList</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_items">Browse Items</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="view_list">View List</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="list_icon_desc">View list icon</string>
    <string name="manage_icon_desc">Manage categories icon</string>
    <string name="add_icon_desc">Add items icon</string>
    <color name="Black">#000000</color>
    <color name="ExpandItemBackground">#FFAFABAB</color>
    <color name="ExpandCategoryBackground">#FF7C7C7C</color>
    <string name="add_item">Add Items</string>
    <string name="add_auto_complete"><i>Add an Item</i></string>
    <string name="prompt_label">Edit Item Details</string>
    <string name="prompt_item_name">Item Name</string>
    <string name="prompt_item_quantity">Quantity</string>
    <string name="prompt_item_units">Units</string>
    <string name="picked_label">Did you pick up this item?</string>
    <string name="prompt_add_label">Enter Item Details</string>
    <string name="add_preset_item">Add Preset Item</string>
    <string name="prompt_item_category">Item Category</string>
    <string name="prompt_add_to_list_label">Add Item to Shopping List</string>
    <string name="prompt_add_to_list_quantity">Enter Quantity</string>
    <string name="prompt_add_to_list_units">Enter Units</string>
    <string name="add_shopping_list">Add New List</string>
    <string name="prompt_add_list_label">Add a new Shopping List:</string>
    <string name="prompt_add_list_name">Enter list name</string>
    <string name="finished_adding">Finished Adding</string>
    <string name="return_button">Return to List Screen</string>
    

</resources>