<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/promptAddToListLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_add_to_list_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/promptAddToListQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_add_to_list_quantity" />

    <EditText
        android:id="@+id/inputAddToListQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/promptAddToListUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_add_to_list_units" />

    <EditText
        android:id="@+id/inputAddToListUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >
    </EditText>

</LinearLayout>