<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/promptAddLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_add_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/promptAddName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_item_name" />

    <EditText
        android:id="@+id/inputAddName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/promptAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_item_category" />

    <EditText
        android:id="@+id/inputAddCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >
    </EditText>

</LinearLayout>